Started adding folders for Visual Studio.
See https://gitter.im/mosra/magnum/archives/2017/03/25

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,9 @@ endif()
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/modules/")
 
+# Use folders for nice tree in Visual Studio and XCode
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+
 # Find Corrade first so we can check on the target
 find_package(Corrade REQUIRED PluginManager Utility)
 
