--- a/src/MagnumExternal/OpenGL/GLES2/CMakeLists.txt
+++ b/src/MagnumExternal/OpenGL/GLES2/CMakeLists.txt
@@ -46,6 +46,7 @@ endif()
 if(NOT CORRADE_TARGET_NACL AND NOT CORRADE_TARGET_EMSCRIPTEN)
     # flextGLPlatform*.cpp is compiled as part of Magnum*Context libraries in Platform
     add_library(MagnumFlextGLObjects OBJECT ${MagnumOpenGL_SRCS})
+    set_target_properties(MagnumFlextGLObjects PROPERTIES FOLDER "MagnumExternal")
     target_include_directories(MagnumFlextGLObjects PUBLIC $<TARGET_PROPERTY:Magnum,INTERFACE_INCLUDE_DIRECTORIES>)
 
     if(NOT BUILD_STATIC)
